--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 .redB {
     margin: 5px;
+    margin-left: auto;
     bottom: 90px;
     right: 39px;
     /* padding: 2px; */
@@ -24,3 +25,16 @@
 .borderColor{
     border-color:black; 
 }
+
+.status-circle {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: relative;
+    /*margin: auto; */
+    padding-bottom: 5%;
+    padding-right: 2%;
+    
+}
+
+
