--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0px;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
 .redB {
     margin: 5px;
     margin-left: auto;
@@ -38,3 +46,8 @@
 }
 
 
+.settingsButton {
+    border: none;
+    background-color: whitesmoke;
+    float: right;
+}
