--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
     margin: 0px;
-    position: fixed;
     width: 100%;
     height: 100%;
     left: 0;
@@ -23,6 +22,7 @@ body {
 .cardColor{
     border-color:black; 
     background-color:whitesmoke;
+    border-radius: 0% !important;
 }
 
 .img-size{
@@ -30,19 +30,27 @@ body {
     max-height:6%;
 }
 
+.img-bot{
+    max-width: 100%;
+    
+}
+
 .borderColor{
     border-color:black; 
+    border-radius: 0% !important;
 }
 
 .status-circle {
-    display: flex;
+    /*display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     position: relative;
     /*margin: auto; */
-    padding-bottom: 5%;
-    padding-right: 2%;
-    
+    /* padding-bottom: 5%; */
+    /* padding-right: 2%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -51,3 +59,9 @@ body {
     background-color: whitesmoke;
     float: right;
 }
+
+.no-link {
+    text-decoration: none;   /* Remove underline */
+    color: inherit;          /* Inherit the color from the parent element */
+    cursor: default;         /* Remove the pointer cursor, use default instead */
+  }
