--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,22 @@
-body {
-    margin: 0px;
-    width: 100%;
+html, body {
     height: 100%;
-    left: 0;
-    top: 0;
-    position: fixed;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.container {
+    flex-grow: 1;
+}
+
+.col-8 {
+    flex-grow: 1;
 }
 
 .redB {
@@ -12,7 +24,6 @@ body {
     margin-left: auto;
     bottom: 90px;
     right: 39px;
-    /* padding: 2px; */
     z-index: 25;
 }
 
@@ -28,8 +39,10 @@ body {
 }
 
 .img-size{
-    max-width:4%; 
-    max-height:6%;
+    width: 70px;
+    height: 70px;
+    padding-bottom: 0%;
+    margin-bottom: 0%;
 }
 
 .img-bot{
@@ -69,6 +82,7 @@ body {
   }
 
 .scroll {
-    max-height: 280px;
+    height: 580px;
+    flex-grow: 1;
     overflow-y: auto;
 }
