--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,37 @@ footer {
     color: black;
 }
 
+.matrix-content {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center;
+    justify-content: center; */
+    width: 100%;
+    /* text-align: center; */
+}
+
+.circle {
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    width: 100%; 
+}
+
+.total-users-circle {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    background-color: #17a2b8;
+    color: white;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+
+
 
 @media screen and (max-width: 600px) {
     .card {
