--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ html, body {
 
 .container {
     flex-grow: 1;
+    /* border: black;
+    border-width: 10px; */
+}
+
+.analysis-container {
+    border-color:black; 
 }
 
 .status-container {
